--- a/todo
+++ b/todo
@@ -22,118 +22,36 @@ Document how to run the project (README) and test the DB access via terminal que
 
 Plan the demo: list 5–6 user-facing features you can show without diving into code, prep accounts (especially an already logged-in user), and make sure sockets/auth flows are smooth.
 
+Why SQLite (informed choice)
 
+Simple setup, no server needed
+Works great with small web apps
+Easy to inspect manually during exam
+Already used in your project
+Database commands (run in terminal)
 
-<script>
-  import { Router, Link, Route } from "svelte-routing";
-  import 'toastr/build/toastr.min.css';
-  import Login from "./pages/Login.svelte";
-  import Profile from "./pages/Profile.svelte";
-  import StudyRoom from "./pages/StudyRoom.svelte";
-  
-</script>
+From Eksamen/studyhelp/server, open the DB:
+sqlite3 database.db
 
+List tables:
+.tables
 
-<Router>
-  <nav class="nav">
-    <Link to='/'>Home</Link>
-    <Link to='/login'>login</Link>
-    <Link to='/profile'>profile</Link>
-    <Link to='/study-room'>study room</Link>
-  </nav>
-  <div>
-    <Route path='/'>
-      <h1>
-        Study Helper
-      </h1>
-      <h2><span>Coming Soon™</span></h2>
-    </Route>
-    <Route path='/login'><Login /></Route>
-    <Route path='/profile'><Profile /></Route>
-    <Route path='/study-room'><StudyRoom /></Route>
-  </div>
-</Router>
+Show schema:
+.schema reminders
+.schema users
 
+Insert a reminder manually:
+INSERT INTO reminders (user_id, title, reminder_date, reminder_time)
+VALUES (1, 'Exam prep', '2026-02-15', '18:00');
 
+List reminders for one user:
+SELECT id, title, reminder_date, reminder_time
+FROM reminders
+WHERE user_id = 1
+ORDER BY reminder_date, reminder_time;
 
+Delete a reminder:
+DELETE FROM reminders WHERE id = 1;
 
-
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+Exit:
+.quit
